Working board drag. Next fix jumpy drag of board, smoother drag of objects. Pdfs not showing.

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ body {
   background-image: linear-gradient(rgba(0, 0, 0, 0.02), rgba(0, 0, 0, 0));
   padding: .8rem .4rem;
   border-radius: 12px;
-  z-index: 100;
+  z-index: 0;
 }
 
 .itemForms-top {
@@ -58,7 +58,7 @@ body {
   flex-direction: column;
   justify-content: center;
   gap: .8rem;
-  z-index: 0;
+  z-index: 100;
 }
 
 .top-buttons {
@@ -166,7 +166,7 @@ input[type="color"] {
   position: fixed;
   top: 0px;
   right: 0px;
-  z-index: 99;
+  z-index: 101;
   border-radius: 0px 0px 0px 12px;
 }
 
@@ -175,7 +175,7 @@ input[type="color"] {
   position: fixed;
   top: 0px;
   left: 0px;
-  z-index: 99;
+  z-index: 101;
   border-radius: 0px 0px 12px 0px;
 }
 
